# transcendence

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  MasternodeGuide.dotx  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool  roadmap  setup.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
contrib/: gitian-build.sh  transcendence-qt.pro  transcendenced.bash-completion
depends/: Makefile  README.md  config.site.in
doc/: Doxyfile  Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md  zmq.md
share/: genbuild.sh  setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  (+108 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bip38tooldialog.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  dashboardwidget.cpp  dashboardwidget.h  editaddressdialog.cpp  form  governancepage.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  masternodelist.cpp  multisigdialog.cpp  notificator.h  obfuscationconfig.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  privacydialog.cpp  (+31 more)
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  multisenddialog.ui  multisigdialog.ui  obfuscationconfig.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  tradingdialog.ui  zteloscontroldialog.ui  ztranscendencecontroldialog.ui
src/qt/locale/: transcendence_bg.ts  transcendence_ca.ts  transcendence_cs.ts  transcendence_da.ts  transcendence_de.ts  transcendence_en.ts  transcendence_en_GB.ts  transcendence_en_US.ts  transcendence_eo.ts  transcendence_es.ts  transcendence_es_ES.ts  transcendence_fi.ts  transcendence_fr_FR.ts  transcendence_hi_IN.ts  transcendence_hr.ts  transcendence_hr_HR.ts  transcendence_it.ts  transcendence_ja.ts  transcendence_ko_KR.ts  transcendence_lt_LT.ts  transcendence_nl.ts  transcendence_pl.ts  transcendence_pt.ts  transcendence_pt_BR.ts  transcendence_ro_RO.ts  transcendence_ru.ts  transcendence_sk.ts  transcendence_sv.ts  transcendence_tr.ts  transcendence_uk.ts  transcendence_vi.ts  transcendence_zh_CN.ts  transcendence_zh_TW.ts
src/qt/res/: transcendence-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: Thumbs.db  bitcoin.icns
src/qt/res/images/: Thumbs.db
src/qt/test/: paymentrequestdata.h  test_main.cpp  uritests.cpp
src/qt/transcendence/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addresslabelrow.cpp  addresslabelrow.h  coincontrolpivwidget.cpp  coincontrolpivwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultinputdialog.cpp  defaultinputdialog.h  denomgenerationdialog.cpp  emailinputdialog.cpp  emailinputdialog.h  expandablebutton.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  linkswidget.cpp  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  lockunlock.h  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  mninfodialog.h  mnmodel.cpp  mnmodel.h  mnrow.cpp  (+44 more)
src/qt/transcendence/forms/: addnewaddressdialog.ui  addnewcontactdialog.ui  addresseswidget.ui  addresslabelrow.ui  coincontrolpivwidget.ui  dashboardwidget.ui  defaultdialog.ui  defaultinputdialog.ui  denomgenerationdialog.ui  emailinputdialog.ui  linkswidget.ui  lockunlock.ui  masternodeswidget.ui  masternodewizarddialog.ui  mninfodialog.ui  mnrow.ui  navmenuwidget.ui  optionbutton.ui  privacywidget.ui  receivedialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendconfirmdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  snackbar.ui  tooltipmenu.ui  topbar.ui  txrow.ui  walletpassworddialog.ui  welcomecontentwidget.ui
src/qt/transcendence/res/css/: style_dark.css  style_light.css
src/qt/transcendence/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/transcendence/settings/forms/: settingsbackupwallet.ui  settingsbittoolwidget.ui  settingsconsolewidget.ui  settingsdisplayoptionswidget.ui  settingsexportcsv.ui  settingsfaqwidget.ui  settingsinformationwidget.ui  settingsmainoptionswidget.ui  settingsmultisenddialog.ui  settingsmultisendwidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswalletrepairwidget.ui  settingswidget.ui
(+145 files in other folders)
